# DataBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  set-up.md
bot/: commandmod.py  commandmodserver.py  commandowner.py  commandpoll.py  commanduser.py  constructer.py  counter.py  decorators.py  helpfunc.py  inspiro.py  jsonhandel.py  poll.py  subroutine.py  textban.py  xpfunk.py
button_views/: leaderboard_buttons.py  poll_buttons.py
cogs/: commandgiverole.py  commandlistener.py  commandmod.py  commandmodserver.py  commandowner.py  commandpoll.py  commandsubroutine.py  commandsubserver.py  commanduser.py
data/: commandRights.json  config.json  sub.json
data/giveroles/: example.json.exp
databot/: __init__.py  command_checks.py  config.py  databot.py
databot/features/: dynamic_channel.py  quote.py  roles_board.py
datahandler/: commandrights.py  configHandle.py  counter.py  jsonhandel.py  jsonhandle.py  poll.py  sub.py  subroutine.py  tempLeaderboard.py  tempPoll.py  textban.py  userHandle.py
helpfunctions/: decorators.py  helpfunc.py  inspiro.py  utils.py  xpfunk.py
src/: __init__.py
src/databot/: __init__.py  command_checks.py  config.py
src/databot/features/: quote.py
test/datahandler/: testUserHandle.py
test/tempLeaderboard/: testTempLeaderboard.py
test/tempPoll/: testTempPoll.py
tests/: test_dynamic_voice_channel.py  test_roles_board.py
